• Updated look of new filter tags; fixed z-index bug with city header dropdowns being underneath the price in the cityBuidling items

--- a/client/templates/city/city.styl
+++ b/client/templates/city/city.styl
@@ -49,20 +49,24 @@
     @media screen and (min-width: 1200px)
       margin-left 30px
 
+    i
+      margin-right 8px
+      font-size 80%
+      position relative
+      left -1px
+      top -1px
+
     .filter-tag
-      border 1px solid #90b8fc
-      border-radius 20px
-      background #f8f8f8
-      color #888
+      border-radius 4px
       display inline-block
-      font-size 12.5px
-      margin 0 5px 4px 0
+      font-size 12px
+      margin 0 6px 4px 0
       padding 3px 16px
       text-transform capitalize
       @media screen and (min-width: 768px)
-        font-size 13.5px
-        padding 4px 20px
-        margin 0 10px 0 0
+        font-size 12px
+        padding .4em 1.1em .35em
+        margin 0 12px 0 0
 
 
   #mobile-cta
