--- a/client/templates/city/cityHeader/cityHeader.styl
+++ b/client/templates/city/cityHeader/cityHeader.styl
@@ -8,7 +8,7 @@
   padding 0 20px
   position relative
   transition all .45s ease-in-out
-  z-index 101
+  z-index 1020
   @media screen and (min-width: 992px)
     padding 0 25px
 
@@ -380,9 +380,9 @@
   float left
 
 .building-title-search-wrapper
-  display none
   margin 10px auto
   @media screen and (min-width: 768px)
+    display none
     padding 0 0 0 5px
   @media screen and (min-width: 992px)
     display block
